z-index -1 on character, div aren't clickable fixed

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -1,13 +1,14 @@
 /* HEADER */
 header {
-  background-color: #ec1d24;
+  background-color: rgb(236, 29, 36);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 2Opx;
+  margin-bottom: 10px;
   height: 50px;
   position: sticky;
   top: 0px;
+  z-index: 1;
 }
 
 .logo {
