--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 10px;
 }
 
 .comicsTitle,
@@ -19,7 +18,6 @@
   width: 175px;
   height: 175px;
   position: relative;
-  z-index: -1;
 
   h2 {
     position: absolute;
@@ -51,7 +49,7 @@
   h2 {
     position: absolute;
     bottom: 0px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     text-align: center;
     color: white;
